# zapiska

./: .gitignore  CMakeLists.txt  build.sh  run.sh
data/: marine_channels.json
data/presets/: marine-vhf.json
docs/: Arch.md  Implementation.md
src/marine/: CMakeLists.txt
src/marine/core/: AudioLevelSink.cpp  AudioLevelSink.h  ChannelReceiver.cpp  ChannelReceiver.h  GrOsmoSdrSource.cpp  GrOsmoSdrSource.h  IqFftSink.cpp  IqFftSink.h  IqPowerSink.cpp  IqPowerSink.h  MarineCore.cpp  MarineCore.h  SdrSource.cpp  SdrSource.h
src/marine/recorder_gui/: MainWindow.cpp  MainWindow.h  WaterfallWidget.cpp  WaterfallWidget.h  main.cpp
src/marine/tools/: sdr_smoke.cpp
src/zapiska/: CMakeLists.txt
src/zapiska/core/: AudioLevelSink.cpp  AudioLevelSink.h  ChannelCatalog.cpp  ChannelCatalog.h  ChannelReceiver.cpp  ChannelReceiver.h  GrOsmoSdrSource.cpp  GrOsmoSdrSource.h  IqFftSink.cpp  IqFftSink.h  IqPowerSink.cpp  IqPowerSink.h  SdrSource.cpp  SdrSource.h
src/zapiska/gui/: MainWindow.cpp  MainWindow.h  WaterfallWidget.cpp  WaterfallWidget.h  main.cpp
src/zapiska/tools/: sdr_smoke.cpp
